--- a/package.json
+++ b/package.json
@@ -21,13 +21,21 @@
   },
   "dependencies": {
     "axios": "^1.2.1",
+    "clsx": "^1.2.1",
+    "crypto-js": "^4.1.1",
+    "hashids": "^2.2.10",
+    "lodash": "^4.17.21",
     "next": "13.0.1",
     "nprogress": "^0.2.0",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.41.0",
     "react-infinite-scroll-component": "^6.1.0",
-    "react-query": "^3.39.2"
+    "react-query": "^3.39.2",
+    "react-spinners": "^0.13.7",
+    "react-toastify": "^9.1.1",
+    "use-debounce": "^9.0.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
