--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "crypto-js": "^4.1.1",
     "hashids": "^2.2.10",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "next": "13.0.1",
     "nprogress": "^0.2.0",
     "prop-types": "^15.8.1",
@@ -35,7 +36,8 @@
     "react-query": "^3.39.2",
     "react-spinners": "^0.13.7",
     "react-toastify": "^9.1.1",
-    "use-debounce": "^9.0.2"
+    "use-debounce": "^9.0.2",
+    "zustand": "^4.1.5"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
