--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "react-hook-form": "^7.41.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-query": "^3.39.2",
+    "react-slick": "^0.29.0",
     "react-spinners": "^0.13.7",
     "react-toastify": "^9.1.1",
+    "slick-carousel": "^1.8.1",
     "use-debounce": "^9.0.2",
     "zustand": "^4.1.5"
   },
